--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,4 @@
+/* =========================responsive nav====================  */
 .menu-icon{
     display: none;
 }
@@ -65,4 +66,10 @@
         transition: 0.6s;
         z-index: 1;
     }
+}
+@media (max-width:1400px){
+    .container{
+        padding: 2% 8%;
+    }
+    
 }
